Calculate minimum register count per function